# AI-Powered-Job-Recommender-System

./: README.md  pyproject.toml
src/: helper.py  job_api.py
